# haw-BTM-SE

Code/Clion-Grundprojekt/SEP_Grundprojekt/: CMakeLists.txt
Code/Clion-Grundprojekt/SEP_Grundprojekt/festo/: CMakeLists.txt  README.md  main.cpp
Code/Clion-Grundprojekt/SEP_Grundprojekt/festo/src/: CMakeLists.txt  factory.cpp  minilab1008processimage.cpp  minilab1008processimage.h
Code/Clion-Grundprojekt/SEP_Grundprojekt/festo/src/plugin/: defectDetector.cpp  defectDetector.h
Code/Clion-Grundprojekt/SEP_Grundprojekt/festo/test/: CMakeLists.txt  test1.cpp
Diagramme/: FSM State Machine_mit Detection.uxf  FSM State Machine_mit Detection_old.uxf  FSM State Machine_source_code.uxf  IBD.uxf  Klassendiagramm_neuV.uxf
